# JCBImager

./: .gitignore  CMakeLists.txt  JCBImager.jucer  README.md
Assets/FactoryPresets/: Basic_openMids.preset
Assets/code/: GenExp.bak.txt  GenExpr.txt  GenExprFuncionando.txt
Assets/code/otros/: GenExpr.bak.txt  GenExpr_backup_before_lr4.txt  LR4.txt
Max/: JCBImager.maxpat
Max/oldPatches/: JCBImager.maxpat  JCBImager2.maxpat  JCBImager3 (crossover Graham).maxpat  JCBImager3 (crossover Graham)_matriz independinte 1.maxpat  JCBImager3 (crossover Graham)_matriz independinte 2025-1.maxpat  JCBImager3 (crossover Graham)_matriz independinte 2025.maxpat  JCBImager3 (crossover Graham)_matriz independinte test.maxpat  gen~imager.maxpat
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/Components/UI/: CustomComboBox.cpp  CustomComboBox.h  CustomSlider.h  CustomTooltip.h  GoniometerComponent.cpp  GoniometerComponent.h  GradientMeter.h  HierarchicalComboBox.cpp  HierarchicalComboBox.h  SpectrumAnalyzerComponent.cpp  SpectrumAnalyzerComponent.h  TrimSlider.h
Source/Components/Windows/: CodeWindow.cpp  CodeWindow.h  CreditsWindow.cpp  CreditsWindow.h  CustomDialog.h  DarkThemeColors.h  UndoableButtonAttachment.h  UndoableMultiStateButtonAttachment.h
Source/Helpers/: MovingAverage4800.h  ParameterChangeAction.h  UTF8Helper.h  UndoableParameterHelper.h
exported-code/: JCBImager.cpp  JCBImager.h
